--- a/app/assets/stylesheets/slick.scss
+++ b/app/assets/stylesheets/slick.scss
@@ -65,12 +65,14 @@ margin-right: auto;
 float: left;
 height: 100%;
 min-height: 1px;
+outline: none;
 [dir="rtl"] & {
   float: right;
 }
 img {
   display: block;
 }
+
 &.slick-loading img {
   display: none;
 }
