--- a/app/assets/stylesheets/config/colors.scss
+++ b/app/assets/stylesheets/config/colors.scss
@@ -2,3 +2,6 @@ $sky_blue: rgb(0, 149, 238);
 $black: #333;
 $white: rgb(255, 255, 255);
 $red: rgb(234, 53, 45);
+$border_grey: #ccc;
+$background_grey: #f5f5f5;
+$text-grey: #888;
