--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -2,7 +2,7 @@
   %div.header__content
     %div.header__content__up
       %div.header__content__up__left
-        = link_to "#" do
+        = link_to root_path do
           = image_tag 'fmarket_logo_red.svg', alt: 'mercari-logo'
       %div.header__content__up__right
         %form.header__content__up__right__form
