--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,9 +25,11 @@
 
 
 body {
-  background-color: rgb(245, 245, 245);
+  background: #f5f5f5;  
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  color: #333;
+  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
 }
 
