--- a/app/views/products/_footer.html.haml
+++ b/app/views/products/_footer.html.haml
@@ -34,10 +34,10 @@
           %div.footer-top__content--social
             %li
               = link_to "#" do
-                = fa_icon 'twitter'
+                = image_tag("twitter-brands.jpg",height: "35px", width: "35px")
             %li
               = link_to "#" do
-                = fa_icon 'facebook-square'
+                = image_tag("facebook-square-brands.jpg",height: "32px", width: "32px")
       %div.footer-top__content
         %h2 ヘルプ＆ガイド
         %ul
