--- a/app/views/products/_pickup.html.haml
+++ b/app/views/products/_pickup.html.haml
@@ -100,3 +100,6 @@
             %span.pickup__box__bottom__list__range__content__title__price
               ¥12,000
             = image_tag "product/sample5.jpg", class:'pickup-content__img'
+            %div.soldout-tag
+              %span
+                SOLD
