--- a/app/assets/stylesheets/module/products/_show.scss
+++ b/app/assets/stylesheets/module/products/_show.scss
@@ -1,4 +1,3 @@
-// @import "product-slider";
 .product-show-main-background {
   padding-top: 40px;
   margin-top: 40px;
@@ -29,6 +28,7 @@
         max-width: 300px;
         max-height: 420px;
         font-size:0;
+        position: relative;
         .image {
           left: 0px;
           height: 300px;
@@ -77,7 +77,7 @@
         border: 1px solid #f5f5f5;
         padding: 8px;
         border-collapse: collapse;
-        font-size: 13px;
+        font-size: 14px;
       }
       & td {
         width: 61%;
@@ -86,49 +86,43 @@
         border-collapse: collapse;
         border: 1px solid #f5f5f5;
         .user-name-string {
-          color: #0099e8;
-          font-size: 12px;
-          text-decoration: none;
+          color: $sky_blue;
+          font-size: 14px;
         }
         .product-detail-table-sub {
           text-align: start;
-          color: #0099e8;
+          color: $sky_blue;
           &__sub {
             text-align: start;
-            color: #0099e8;
+            color: $sky_blue;
             &__sub {
               text-align: start;
-              color: #0099e8;
+              color: $sky_blue;
             }
           }
         }
         .product-detail {
-          font-size: 13px;
+          font-size: 14px;
         }
         .brand-name {
-          color: #0099e8;
+          color: $sky_blue;
           text-align: left;
         }
         .prefecture-name {
-          color: #0099e8;
+          color: $sky_blue;
         }
       }
       .product-user-ratings {
         display: flex;
+        margin-top: 5px;
         & span {
           background-color: transparent;
           color: #333;
           margin-left: 0;
           padding: 0px 11px 0px 2px;
         }
-        .fa-smile-o {
-          color: #ef5185;
-        }
-        .fa-meh-o {
-          color: #fba933;
-        }
-        .fa-frown-o {
-          color: #6ab5d8;
+        img {
+          vertical-align: bottom;
         }
       }
     }
@@ -198,15 +192,18 @@
     }
     .product-button-container.clearfix {
       font-size: 14px;
-      display: flex;
       justify-content: space-between;
       display: flex; 
       vertical-align: center;
       .product-button-left {
+        
         display: inline-block;
         flex-direction:row;
+        display: flex;
         margin: 8px 0 0;
-        justify-content: space-between;
+        .product-button-like {
+          margin: 8px 15px 0 0;
+        }
         .product-button {
           border: 1px solid #f5f5f5;
           background: #f5f5f5;
@@ -243,6 +240,9 @@
     font-size: 14px;
     margin-right: 7px;
   }
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 .product-button-right {
@@ -252,7 +252,7 @@
   margin-right: 7px;
   float: right;
   .safe-description {
-    color: #0099e8;
+    color: $sky_blue;
   }
 }
 
@@ -380,7 +380,7 @@
   margin: 0 auto;
   width: 700px;
   display: flex;
-  color: #0099e8;
+  color: $sky_blue;
   display: inline-block;
   padding: 32px 0 24px;
   &-prev a{
@@ -662,12 +662,12 @@
 
 .previous-product.items-link_to{
   font-size: 14px;
-  color:#0099e8;
+  color:$sky_blue;
 }
 .next-product.items-link_to{
   font-size: 14px;
   float: right;
-  color:#0099e8;
+  color:$sky_blue;
 }
 
 .brand-name{
@@ -677,4 +677,47 @@
 .product-btn-or{
   text-align: center;
   margin: 8px 0 0 0;
+}
+
+  //  soldout_tag  //
+
+.soldout-tag_for_show_page {
+  display: block;
+  color: #333;
+  z-index: 1;
+  span {
+    display: block;
+    top: 27px;
+    font-size: 28px;
+    position: absolute;
+    left: 0;
+    z-index: 5;
+    color: #fff;
+    transform: rotate(-45deg);
+    letter-spacing: 2px;
+    font-weight: 600;
+  }
+}
+.soldout-tag_for_show_page::after {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-color: #ea352d transparent transparent transparent;
+  border-width: 120px 120px 0 0;
+}
+
+  //  hover  //
+
+.hover-blue {
+  &:hover {
+    opacity: 0.7;
+    text-decoration: underline;
+    cursor: pointer;
+    color: $sky_blue;
+  }
 }
