--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -65,22 +65,23 @@
       }
     }
 
-  //  category_start //
+  //  category  //
 
     &__bottom {
       margin-top: 8px;
       display: flex;
       -webkit-box-pack: justify;
       justify-content: space-between;
-      span {
-        padding-right: 20px;
-        font-weight: 550;
-      }
+      
       &__left {
         display: flex;
         margin-left: 0px;
         height: 44px;
-        i {
+        span {
+          padding-right: 20px;
+          font-weight: 550;
+        }
+        svg {
           color: $red;
         }
         a {
@@ -120,8 +121,8 @@
               display: none;
               background-color: white;
               &:hover {
-                background-color: red;
-                color: white;
+                background-color: $red;
+                color: $white;
                 .header__menu-box--left__children {
                   &__child {
                     display: block;
@@ -135,12 +136,12 @@
                 left: 220px;
                 z-index: 1000;
                 height: 520px;
-                background-color: white;
+                background-color: $white;
                 &__child {
                   width: 220px;
                   height: 0;
                   display: none;
-                  background-color: white;
+                  background-color: $white;
                   &:hover {
                     background-color: #f3f3f3;
                     color: $black;
@@ -159,12 +160,12 @@
                     top: 0;
                     left: 220px;
                     height: 520px;
-                    background-color: white;
+                    background-color: $white;
                     &__grand-child {
                       width: 300px;
                       height: 0;
                       display: none;
-                      background-color: white;
+                      background-color: $white;
                       a {
                         font-size: 14px;
                         &:hover {
@@ -180,7 +181,7 @@
           }
         }
 
-  //  category_over  //
+  //  brand  //
 
         &__brand {
           font-weight: 600;
@@ -197,6 +198,68 @@
       }
       &__right {
         display: flex;
+
+//  when_user_login //
+
+        &__like, &__notice, &__todo, &__mypage {
+          display: block;
+          padding: 0px 14px;
+          height: 44px;
+          position: relative;
+          display: flex;
+          .nav-link {
+            -webkit-box-align: center;
+            align-items: center;
+            display: flex;
+            font-size: 14px;
+            height: 32px;
+            transform: scale(1);
+            transition: all 0.3s ease-out 0s;
+            svg {
+              max-width: 100%;
+              height: auto;
+              max-height: 100%;
+              color: rgb(204, 204, 204);
+              margin-right: 10px;
+              width: 19px;
+            }
+          }
+          &:hover{
+            .nav-link, .nav-icon {
+              color: $sky_blue;
+            }
+          }
+        }
+        &__mypage {
+          &:hover {
+            .hover__mypage {
+              display: block;
+            }
+          }
+           img {
+            margin-right: 10px;
+            width: 32px;
+            border-radius: 50%;
+            overflow: hidden;
+            vertical-align: middle;
+           }
+        }
+        .notice_num {
+          background-color: $red;
+          color: $white;
+          font-size: 12px;
+          height: 20px;
+          left: 6px;
+          line-height: 20px;
+          position: absolute;
+          text-align: center;
+          top: -2px;
+          width: 20px;
+          border-radius: 50%;
+        }
+
+  //  when_no_user_login //
+
         &__signup {
           text-align: center;
           top: 0px;
@@ -215,6 +278,7 @@
             height: 32px;
             line-height: 32px;
             font-size: 14px;
+            
           }
         }
         &__login {
@@ -237,6 +301,122 @@
             background-color: $sky_blue;
             color: $white;
           }
+        }
+      }
+    }
+  }
+}
+
+  //  when_hover_user_info //
+
+.hover__mypage {
+  box-sizing: border-box;
+  background-color: $white;
+  position: absolute;
+  top: 44px;
+  right: 0;
+  z-index: 500;
+  width: 320px;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+  display: none;
+  text-align: center;
+  & a:hover {
+    color: $black;
+  }
+  &__content {
+    background-image: image-url('user-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: 320px 80px;
+    padding: 56px 0 0;
+    & figcaption {
+      margin: 8px 0 0;
+      padding: 0 8px;
+      font-size: 16px;
+      display: block;
+      margin-bottom: 10px;
+      & a :hover {
+        color: $black;
+      }
+    }
+    &__info {
+      background: #fafafa;
+      font-size: 14px;
+      color: $black;
+      display: flex;
+      margin: 0 95px;
+      text-align: center;
+      li {
+        margin-right: 10px;
+        &:hover {
+          opacity: 0.7;
+          text-decoration: underline;
+        }
+      }
+    }
+    &__point {
+      width: 300px;
+      margin: 16px auto;
+      background: #fafafa;
+      border: 1px solid $background_grey;
+      display: flex;
+      flex-direction: column;
+      li {
+        display: block;
+        border-top: 1px solid $background_grey;
+        padding: 0 17px 0 6px;
+        line-height: 36px;
+        &:hover {
+          opacity: 0.7;
+          text-decoration: underline;
+        }
+        &:first-child {
+          border: 0;
+        }
+        & .fa-chevron-right {
+          margin-left: 8px;
+          color: $border_grey;
+        }
+      }
+      .mypage-list-left, .l-left {
+        float: left;
+      }
+      .mypage-list-right, .l-right {
+        float: right;
+      }
+    }
+  }
+  &__nav-list {
+    text-align: left;
+    width: 320px;
+    &__item {
+      border-top: 1px solid $background_grey;
+      position: relative;
+      display: block;
+      min-height: 48px;
+      padding: 16px;
+      background: #fff;
+      font-size: 14px;
+      color: #333;
+      box-sizing: border-box;
+      line-height: 14px;
+      .fa-chevron-right  {
+        position: absolute;
+        top: 50%;
+        right: 30px;
+        color: $border_grey;
+        -webkit-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+        -webkit-transition: all ease-out .2s;
+        transition: all ease-out .5s;
+      }
+      &:hover {
+        background: #fafafa;
+        text-decoration: none;
+        opacity: 1;
+        .fa-chevron-right{
+          -webkit-transform: translate(4px, -50%);
+          transform: translate(4px, -50%);
+          color: $black;
         }
       }
     }
