--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -21,7 +21,7 @@
               %li.header__menu-box--left__parents__parent
                 = link_to parent.name, "#"
                 %ul.header__menu-box--left__children
-                  = render partial: "header_child", collection: parent.children, as: "category"
+                  = render partial: "category/category_child", collection: parent.children, as: "category"
         %div.header__content__bottom__left__brand
           = link_to "#" do
             = fa_icon 'tag'
