--- a/app/assets/stylesheets/module/products/_new.scss
+++ b/app/assets/stylesheets/module/products/_new.scss
@@ -88,7 +88,7 @@
                 display: none;
               }
               div {
-                background-image: url("text_area.jpg");
+                background-image: image-url("text_area.jpg");
                 background-size: 590px 162px ;
                 cursor: pointer;
                 height: 162px;
