--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -113,4 +113,4 @@
           %div.header__content__bottom__right__signup
             = link_to '新規会員登録', signup_index_path 
           %div.header__content__bottom__right__login
-            = link_to 'ログイン', "#"
+            = link_to 'ログイン', new_user_session_path
