ログアウト　実装

--- a/app/views/mypage/_main-content.html.haml
+++ b/app/views/mypage/_main-content.html.haml
@@ -67,7 +67,7 @@
               = image_tag 'logo_red.svg', size: '48x48'
             .mypage-content__item-body
               .mypage-content__item-text
-                <1/31まで>最大3%還元！メルペイスマート腹いでメルカリのお買い物をしよう！
+                <1/31まで>最大3%還元！メルペイスマート払いでメルカリのお買い物をしよう！
               %time
                 = fa_icon 'clock'
                 %span
