--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,8 @@
 @import "module/products/new";
 @import "module/products/purchase_confirmation";
 @import "module/products/sellbuttom";
+
+  //  mypage_relation  //1  
 @import "mypage/mypage";
 @import "mypage/mypage.content";
 @import "mypage/mypage.side-bar";
