--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -60,7 +60,7 @@
             = link_to root_path, class: "nav-link" do
               = image_tag 'member_photo_noimage.png'
               %span
-                = link_to 'マイページ', "#", class: "nav-link"
+                = link_to 'マイページ', mypage_index_path, class: "nav-link"
               %div.hover__mypage
                 %div.hover__mypage__content
                   %figure
