--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 @import "module/products/main";
 @import "module/products/new";
 @import "module/products/purchase_confirmation";
+@import "module/products/purchase_done";
 @import "module/products/sellbuttom";
 @import "mypage/mypage";
 @import "mypage/mypage.content";
