--- a/app/views/mypage/_side-bar.html.haml
+++ b/app/views/mypage/_side-bar.html.haml
@@ -96,6 +96,6 @@
           電話番号の確認
           = fa_icon 'chevron-right'
       %li
-        = link_to '#', class: 'mypage-side-bar__list-item' do
+        = link_to logout_mypage_index_path, method: "GET", class: 'mypage-side-bar__list-item' do
           ログアウト
           = fa_icon 'chevron-right'
