--- a/app/views/mypage/_side-bar.html.haml
+++ b/app/views/mypage/_side-bar.html.haml
@@ -72,7 +72,7 @@
       設定
     %ul.mypage-side-bar__list
       %li
-        = link_to mypage_index_path, class: 'mypage-side-bar__list-item' do
+        = link_to profile_mypage_index_path, class: 'mypage-side-bar__list-item' do
           プロフィール
           = fa_icon 'chevron-right'
       %li
