--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@
 @import "mypage/mypage.content";
 @import "mypage/mypage.side-bar";
 @import "mypage/profile";
+@import "mypage/bread-crumbs";
 
 
 
