--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@
 @import "mypage/mypage.side-bar";
 @import "mypage/profile";
 @import "mypage/bread-crumbs";
+@import "mypage/identification";
 
 
 
