--- a/app/views/mypage/_side-bar.html.haml
+++ b/app/views/mypage/_side-bar.html.haml
@@ -88,7 +88,7 @@
           メール/パスワード
           = fa_icon 'chevron-right' 
       %li
-        = link_to '#', class: 'mypage-side-bar__list-item' do
+        = link_to identification_mypage_index_path, class: 'mypage-side-bar__list-item' do
           本人情報
           = fa_icon 'chevron-right'
       %li
