--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 @import "module/products/purchase_done";
 @import "module/products/sellbuttom";
 
-  //  mypage_relation  //1  
+  //  mypage_relation  //
 @import "mypage/mypage";
 @import "mypage/mypage.content";
 @import "mypage/mypage.side-bar";
@@ -35,17 +35,3 @@
 
 
 
-body {
-  background: #f5f5f5;  
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  color: #333;
-  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-}
-
-*, ::before, ::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
