--- a/app/assets/stylesheets/config/reset.scss
+++ b/app/assets/stylesheets/config/reset.scss
@@ -134,3 +134,18 @@ a {
 * {
   box-sizing: border-box;
 }
+
+body {
+  background: #f5f5f5;  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  color: #333;
+  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
+}
+
+*, ::before, ::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
