--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -16,6 +16,7 @@
             = f.fields_for :image do |image|
               .dropzone-container
                 #preview
+                #preview2
                 .dropzone-area
                   = image.label :image, class: "dropzone-box", for: "upload-image__btn" do
                     .input_area
