--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -23,7 +23,7 @@
                 %ul.header__menu-box--left__children
                   = render partial: "category/category_child", collection: parent.children, as: "category"
         %div.header__content__bottom__left__brand
-          = link_to "#", method: 'delete' do
+          = link_to destroy_user_session_path,  method: 'delete' do
             = icon('fa', 'tag ',)
             %span ブランドから探す
           %ul.brand__wrapper
