--- a/app/assets/stylesheets/module/products/_main.scss
+++ b/app/assets/stylesheets/module/products/_main.scss
@@ -97,7 +97,7 @@
   }
   .pickup__box__bottom__list {
     display: flex;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
     margin: -10px;
     &__range {
       width: 20%;
@@ -143,7 +143,7 @@
         &__title__price {
           position: absolute;
           left: 0px;
-          bottom: 70px;
+          bottom: 77px;
           background: rgba(0,0,0,.4);
           border-radius: 0 14px 14px 0;
           color: #fff;
@@ -157,6 +157,8 @@
           -webkit-box-align: center;
           -webkit-box-sizing: border-box;
           -ms-flex-align: center;
+          display: block;
+          line-height: 28px;
         }
         img {
           position: absolute;
