--- a/app/views/products/_footer.html.haml
+++ b/app/views/products/_footer.html.haml
@@ -19,7 +19,7 @@
   %div.footer-content
     %div.footer-top
       %div.footer-top__content
-        %h2 メルカリについて
+        %h2 Fmarketについて
         %ul
           %li
             = link_to "会社概要（運営会社）", "#"
@@ -30,7 +30,7 @@
           %li
             = link_to "公式ブログ", "#"
           %li
-            = link_to "メルカリロゴ利用ガイドライン", "#"
+            = link_to "Fmarketロゴ利用ガイドライン", "#"
           %div.footer-top__content--social
             %li
               = link_to "#" do
@@ -42,21 +42,21 @@
         %h2 ヘルプ＆ガイド
         %ul
           %li
-            = link_to "メルカリガイド", "#"
+            = link_to "Fmarketガイド", "#"
           %li
-            = link_to "らくらくメルカリ便", "#"
+            = link_to "らくらくFmarket便", "#"
           %li
-            = link_to "ゆうゆうメルカリ便", "#"
+            = link_to "ゆうゆうFmarket便", "#"
           %li
-            = link_to "大型メルカリ便", "#"
+            = link_to "大型Fmarket便", "#"
           %li
             = link_to "車体取引ガイド", "#"
           %li
-            = link_to "メルカリあんしん・あんぜん宣言！", "#"
+            = link_to "Fmarketあんしん・あんぜん宣言！", "#"
           %li
             = link_to "偽ブランド品撲滅への取り組み", "#"
           %li
-            = link_to "メルカリボックス", "#"
+            = link_to "Fmarketボックス", "#"
       %div.footer-top__content
         %h2 プライバシーと利用規約
         %div.footer-top__content--divide
@@ -65,7 +65,7 @@
               %li
                 = link_to "プライバシーポリシー", "#"
               %li
-                = link_to "メルカリ利用規約", "#"
+                = link_to "Fmarket利用規約", "#"
               %li
                 = link_to "あんしんスマホサポート制度に関する利用特約", "#"
               %li
@@ -89,5 +89,5 @@
             = link_to "United States", "#"
     %div.footer-bottom
       = link_to "#" do
-        = image_tag("https://www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?3135490372", width: "120px")
-      %span © Mercari, Inc.
+        = image_tag("/assets/fmarket_logo_red-2ca006fe69110d267a9404a3f41d6333a8c8deeebb7271d53baa22f17b04734b.svg", width: "120px")
+      %span © Fmarket, Inc.
